# Connect4_AI

./: .gitignore  Agent.h  Board.h  CMakeLists.txt  Layer.cpp  Layer.h  Net.h  README.md  Utility.cpp  Utility.h  main.cpp  rebuild  rerun  run  test.cpp
